Agrego estilos, eventos y otros cambios
Agrego estilos, eventos y otros cambios
Agrego TODOS, darles bola! D:

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>SelectModal!</title>
         <link rel="stylesheet" type="text/css" href="Content/css/bootstrap-theme.css">
         <link rel="stylesheet" type="text/css" href="Content/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="selectModal.css">
     </head>
     <body>
         <div class="container">
@@ -17,7 +18,7 @@
                 <div class="col-md-4 col-md-offset-4">
                     <label>Select sin optgroup:</label>
                     <select class="form-control">
-                    <option value="uno esta solo">uno esta solo</option>
+                    <option value="uno esta solo y se entera">uno esta solo y se entera</option>
                     <option value="dos diferentes maneras">dos diferentes maneras</option>
                     <option value="tres veces llamo">tres veces llamo</option>
                     <option value="cuatro elementos">cuatro elementos</option>
@@ -40,7 +41,7 @@
                     <label>Select con optgroup:</label>
                     <select class="form-control">
                         <optgroup label="primero">
-                        <option value="uno esta solo">uno esta solo</option>
+                        <option value="uno esta solo y se entera">uno esta solo y se entera</option>
                         <option value="dos diferentes maneras">dos diferentes maneras</option>
                         <option value="tres veces llamo">tres veces llamo</option>
                         <option value="cuatro elementos">cuatro elementos</option>
