--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="javascripts/scale.fix.js"></script>
+	
+	<link rel="stylesheet" type="text/css" href="Content/css/bootstrap-theme.css">
+    <link rel="stylesheet" type="text/css" href="Content/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="selectModal.css">
+	
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
@@ -27,6 +32,59 @@
         </ul>
       </header>
       <section>
+	  
+	              <div class="row form-group">
+                <div class="col-md-4 col-md-offset-4">
+                    <label>Select sin optgroup:</label>
+                    <select class="form-control">
+                    <option value="uno esta solo y se entera">uno esta solo y se entera</option>
+                    <option value="dos diferentes maneras">dos diferentes maneras</option>
+                    <option value="tres veces llamo">tres veces llamo</option>
+                    <option value="cuatro elementos">cuatro elementos</option>
+                    <option value="cinco estrellas">cinco estrellas</option>
+                    <option value="seis es el diablo escondido">seis es el diablo escondido</option>
+                    <option value="siete rayos misteriosos">siete rayos misteriosos</option>
+                    <option value="ocho horizontes infinitos">ocho horizontes infinitos</option>
+                    <option value="nueve es real">nueve es real</option>
+                    <option value="diez y te escondes">diez y te escondes</option>
+                    <option value="once cumpleaños">once cumpleaños</option>
+                    <option value="doce las lunas en tu año">doce las lunas en tu año</option>
+                    <option value="trece no existe la suerte">trece no existe la suerte</option>
+                    <option value="los numeros no mienten">los numeros no mienten</option>
+                    </select>
+                </div>
+            </div>
+            
+            <div class="row form-group">
+                <div class="col-md-4 col-md-offset-4">
+                    <label>Select con optgroup:</label>
+                    <select class="form-control">
+                        <optgroup label="primero">
+                        <option value="uno esta solo y se entera">uno esta solo y se entera</option>
+                        <option value="dos diferentes maneras">dos diferentes maneras</option>
+                        <option value="tres veces llamo">tres veces llamo</option>
+                        <option value="cuatro elementos">cuatro elementos</option>
+                        <option value="cinco estrellas">cinco estrellas</option>
+                    </optgroup>
+                    <optgroup label="segundo">
+                        <option value="seis es el diablo escondido">seis es el diablo escondido</option>
+                        <option value="siete rayos misteriosos">siete rayos misteriosos</option>
+                        <option value="ocho horizontes infinitos">ocho horizontes infinitos</option>
+                        <option value="nueve es real">nueve es real</option>
+                        <option value="diez y te escondes">diez y te escondes</option>
+                        <option value="once cumpleaños">once cumpleaños</option>
+                    </optgroup>
+                    <optgroup label="tercero">
+                        <option value="doce las lunas en tu año">doce las lunas en tu año</option>
+                        <option value="trece no existe la suerte">trece no existe la suerte</option>
+                        <option value="los numeros no mienten">los numeros no mienten</option>
+                    </optgroup>
+                    </select>
+                </div>
+            </div>
+	  
+	  
+	  
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -67,4 +125,15 @@ $ git checkout gh-pages
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
+  
+    <script src="Content/js/jquery-1.11.1.js"></script>
+	<script src="Content/js/bootstrap.js"></script>
+	<script src="selectModal.js"></script>
+
+	<script type="text/javascript">
+		jQuery(document).ready(function(){
+			$('select').selectModal();
+		});
+	</script>
+	
 </html>
